[gd_scene load_steps=9 format=3 uid="uid://c8wi3xlmiynne"]

[ext_resource type="Script" path="res://world.gd" id="1_2n7jh"]
[ext_resource type="Texture2D" uid="uid://dv41onu10lpow" path="res://sprites/background-day.png" id="1_3ogyf"]
[ext_resource type="PackedScene" uid="uid://bqegh78m87qum" path="res://player/player.tscn" id="2_fbfrk"]
[ext_resource type="PackedScene" uid="uid://b5t2dpn0523jg" path="res://ui/menu.tscn" id="3_1ctjb"]
[ext_resource type="PackedScene" uid="uid://3ehjxh81f6ft" path="res://environments/ground.tscn" id="3_ujspf"]
[ext_resource type="PackedScene" uid="uid://b5h2k0db6qbr4" path="res://environments/obstacle_spawner.tscn" id="4_fq7gn"]
[ext_resource type="PackedScene" uid="uid://b2eusigib53gs" path="res://ui/hud.tscn" id="5_4ne53"]
[ext_resource type="PackedScene" uid="uid://cfe454hyay3a5" path="res://environments/ceiling.tscn" id="8_5pr48"]

[node name="World" type="Node2D"]
script = ExtResource("1_2n7jh")

[node name="HUD" parent="." instance=ExtResource("5_4ne53")]

[node name="Menu" parent="." instance=ExtResource("3_1ctjb")]

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(1.66667, 1.66797)
texture = ExtResource("1_3ogyf")
centered = false

[node name="ObstacleSpawner" parent="." instance=ExtResource("4_fq7gn")]
position = Vector2(750, 0)

[node name="Ground" parent="." instance=ExtResource("3_ujspf")]
position = Vector2(1, 695)

[node name="Player" parent="." instance=ExtResource("2_fbfrk")]
position = Vector2(138, 427)
scale = Vector2(1.66667, 1.66797)

[node name="Ceiling" parent="." instance=ExtResource("8_5pr48")]

[connection signal="start_game" from="Menu" to="." method="_on_menu_start_game"]
[connection signal="body_entered" from="Ground/DeathZone" to="." method="_on_death_zone_body_entered"]
[connection signal="died" from="Player" to="." method="_on_player_died"]

[editable path="Ground"]
